<resources>
    <string name="app_name">Insurance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="possibilteSaisie">Possibility of manual entry below.</string>
    <string name="insurance">Insurance company</string>
    <string name="registration">Registration</string>
    <string name="editTextNameInsurance">Name of the insurance company</string>
    <string name="editTextRegistration">Your Vehicule Registration</string>
    <string name="validate">Validate</string>

    <string name="title_activity_Vehicle_B">Vehicle B</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_sinister">ListSinisterActivity</string>
    <string name="title_activity_sinister">SinisterActivity</string>
    <string name="title_activity_test_prof">TestProf</string>
    <string name="hello_blank_add_sinister_fragment">Hello blank add sinister fragment</string>

    <!-- Fragment Add Sinister -->
    <string name="accident_statement">Accident Statement</string>

    <string name="insured_policy_holder">Insured/Policyholder</string>
    <string name="name_insured_policy_holder">Name/Firstname</string>
    <string name="tel_insured_policy_holder">Tel</string>
    <string name="email_insured_policy_holder">Email</string>

    <string name="insurance_company">Insurance Company</string>
    <string name="name_insurance_company">Name</string>
    <string name="policy_insurance_company">Policy N°</string>

    <string name="place_accident">Accident Location</string>
    <string name="car_accident_damage_join_place">Select accident location </string>

    <string name="car_accident_damage">Car Accident Damage</string>
    <string name="car_accident_damage_join_photos">You can join photos of the car accident damage</string>
    <string name="title_activity_maps">Map</string>

</resources>
